<resources>
    <string name="app_name">PianoChords</string>
    <string name="reset">Reset</string>
    <string name="start">Commencer</string>
    <string name="delayTitle">Délai entre chaque accord : </string>
    <string name="firstValue">5 secondes </string>
    <string name="secondValue">10 secondes </string>
    <string name="thirdValue">15 secondes </string>
    <string name="includeMinorsTitle">Inclus accords mineurs </string>
    <string name="includeFlatAndSharpTitle">Inclus accords bémol et dièse </string>
    <string name="traductionTitle">Traduire les accords en français</string>
</resources>